--- a/amr_editor_simple_tbd/css/style.css
+++ b/amr_editor_simple_tbd/css/style.css
@@ -1,5 +1,13 @@
 #help {
+
+}
+
+.help{
     color: #aaa;
     font-style: italic;
     text-decoration: underline;
+}
+
+.help:hover {
+    cursor: pointer;
 }
